[metadata]
name = python-gyanclient
summary = Python Client for Openstack Gyan Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    gyanclient

[compile_catalog]
directory = gyanclient/locale
domain = gyanclient

[update_catalog]
domain = gyanclient
output_dir = gyanclient/locale
input_file = gyanclient/locale/gyanclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = gyanclient/locale/gyanclient.pot

[entry_points]
console_scripts =
    gyan = gyanclient.shell:main

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[wheel]
universal = 1

[global]
setup-hooks =
    pbr.hooks.setup_hook
